# rust_study

./: Cargo.toml
src/: main.rs  study_enum.rs  study_struct.rs
