[package]
name = "rustdate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
chrono-tz = "0.8.2"
display_json = "0.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
