[package]
name = "study_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
chrono-tz = "0.8.2"
display_json = "0.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
glob = "0.3.1"
anyhow = "1.0.71"
calamine = "0.19.1"
rust_xlsxwriter = "0.38.0"
rand = "0.8.5"
clap = { version = "4.3", features = ["derive"] }

tracing-appender = { package = "clia-tracing-appender", version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["local-time","time"] }
tracing =  "0.1"
time = { version = "0.3.21", features = ["formatting","macros"] }
